fix: inherit secrets when running db-tests workflow.

--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -17,6 +17,7 @@ jobs:
     name: Test With DB If Needed
     if: ${{ inputs.need-testing-db }}
     uses: zerapix/reusable-workflows/.github/workflows/py-test-w-db.yml@z_v2
+    secrets: inherit
 
   create-release:
     name: Create Release
