--- a/.github/workflows/py-deploy.yml
+++ b/.github/workflows/py-deploy.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - uses: zerapix/reusable-workflows/all-checkout@z_v2
       - uses: ./.reusable-workflows/py-setup-project
+        with:
+          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
       - uses: ./.reusable-workflows/all-deploy-sls
         with:
           environment: ${{ inputs.environment }}
