--- a/.github/workflows/py-deploy.yml
+++ b/.github/workflows/py-deploy.yml
@@ -13,6 +13,7 @@ on:
         default: ''
         description: Defaults to the environment name; use this if the stage is different; like if its an account-wide "all" stage.
 
+run-name: Deploy To ${{ inputs.environment }}
 concurrency: deploy-${{ inputs.environment }}
 
 jobs:
