--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -65,6 +65,6 @@ jobs:
             github.rest.actions.createWorkflowDispatch({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              workflow_id: 'deployment-auto.yml',
+              workflow_id: 'deploy-auto.yml',
               ref: 'refs/tags/${{ needs.create-release.outputs.created-release-tag-name }}',
             })
