--- a/py-setup-project/action.yml
+++ b/py-setup-project/action.yml
@@ -12,7 +12,7 @@ runs:
     #----------------------------------------------
     - name: Install poetry
       shell: bash
-      run: pipx install poetry
+      run: pipx install poetry==1.7.1
     - name: Read Needed Python Version
       shell: bash
       run: |
