--- a/.github/workflows/js-deploy-prs-w-sls.yml
+++ b/.github/workflows/js-deploy-prs-w-sls.yml
@@ -12,6 +12,12 @@ on:
         description: Host name to link to (will prepend 'prs*' to start of host).
         required: true
 
+      dev-app-pd-host:
+        type: string
+        description: PD host name to link to (will prepend 'prs*' to start of host).
+        required: true
+        default: 'app.pixydocs.dev'
+
 concurrency: deploy-pr-${{ github.event.number }}
 name: Deploy PR
 
@@ -35,7 +41,8 @@ jobs:
           script: |
             const script = require('./.reusable-workflows/scripts/get-pr-slot.js')
             const devAppHost = '${{ inputs.dev-app-host }}'
-            return script({github, context, devAppHost})
+            const devPdAppHost = '${{ inputs.dev-app-pd-host }}'
+            return script({github, context, devAppHost, devPdAppHost})
       - run: echo "Assigned PR Slot (${{ steps.slot-num.outputs.result }})."
 
   deploy-prs:
